--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ body {
      <br><br>Mari kita tidak pernah lelah untuk saling memperbaiki, karena aku tak ingin bersama orang lain selain dirimu. Jika ada yang kurang, mari kita lengkapi bersama. Jika ada yang salah, mari kita temukan kebenarannya, berdua.
       <br><br>Bersamamu, aku belajar bahwa hidup ini tentang bersyukur dan merasa cukup. Jika kita terus mencari kesempurnaan, kita akan kehilangan orang yang selalu ada untuk kita. Aku tak ingin belajar mencintai orang lain; izinkan aku untuk terus mencintaimu, berulang kali. Aku yakin, kita bisa saling melengkapi.
       <br><br>Mari kita wujudkan mimpi-mimpi kita bersama. Aku mencintaimu selalu, dan aku akan selalu menyayangimu.
-      <br><br>Sekian Dariku Untuk Kesayangankuuuuuu🫂
+      <br><br>Sekian Dariku Yandex Untuk Kesayangankuuuuuu🫂
    </p> 
         </div>
     </div>
@@ -222,4 +222,4 @@ $(".heart").on('webkitAnimationEnd oanimationend msAnimationEnd animationend', f
 });
     </script>
 </body>
-</html>
+	</html>
